# flask-cms

./: .flaskenv  .gitignore  README.md  config.py  flask_cms.py  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  models.py
app/auth/: forms.py  routes.py
app/main/: routes.py
app/static/css/: style.css
app/templates/: _header.html  _post.html  about.html  base.html  index.html  post.html  user.html
app/templates/auth/partials/: login.html
app/templates/partials/: about.html  categories.html  index.html  tags.html
app/widgets/: __init__.py  routes.py
migrations/versions/: 142b6f7bfc93_resume_column.py  2f8e9684f2ca_add_user_about_field.py  3bc9c1abb3cd_comment_table.py  4c709ef698aa_add_timestamp_fields.py  d7ec809fdb4a_first_commit.py
